<resources>
    <string name="app_name">Project_02</string>
    <string name="welcome_to_quizzy_please_sign_in">Welcome to Quizzy! Please Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_quizzes">Play Quizzes</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_scores">View Scores</string>

    <string name="preference_file_key">quizzy_prefs</string>
    <string name="preference_userId_key">user_id</string>

    <string name="create_account">Create Account</string>
    <string name="error_empty_fields">Please enter both username and password.</string>
    <string name="error_create_account_empty_fields">Please enter username and fill out both password fields.</string>
    <string name="error_create_account_password_mismatch">Passwords do not match.</string>
    <string name="error_create_account_existing_username">An account with that username already exists.</string>
    <string name="error_create_account_username_invalid_characters">Username contains invalid characters.</string>
    <string name="create_account_successful">Account created successfully!</string>
    <string name="create_admin_account_successful">Admin account created successfully!</string>
    <string name="error_invalid_password">Invalid password.</string>
    <string name="error_invalid_username">%1$s is not a valid username.</string>
    <string name="admin_access">Admin Access</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="enable_admin_account">Enable Admin Account?</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="add_question">Add Question</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="correct_option_a_b_c_d">Correct Option (A/B/C/D):</string>
    <string name="option_d">Option D:</string>
    <string name="option_c">Option C:</string>
    <string name="option_b">Option B:</string>
    <string name="option_a">Option A:</string>
    <string name="question">Question:</string>
    <string name="questions_failed">Questions Failed:</string>
    <string name="questions_passed">Questions Passed:</string>
    <string name="quiz_scores">Quiz Scores</string>
    <string name="quiz_name">Quiz Name:</string>
    <string name="quiz_code">Quiz Code:</string>
    <string name="delete_question">Delete Question</string>
    <string name="code_needed_to_access_test">Code needed to access test</string>
    <string name="code">Code</string>
    <string name="enter">Enter</string>
    <string name="load_quiz">Load Quiz</string>
    <string name="save_changes">Save Changes</string>
    <string name="please_enter_your_quiz_code">Please enter your quiz code</string>


</resources>