<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">


    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textSize="42sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/userNameCreateAccountEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccountTextView" />

    <EditText
        android:id="@+id/passwordCreateAccountEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dip"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameCreateAccountEditText" />

    <EditText
        android:id="@+id/passwordCreateAccountEditTextCopy"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dip"
        android:autofillHints="Please enter the same password"
        android:gravity="center"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameCreateAccountEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="105dip"
        android:layout_margin="16dip"
        android:text="@string/sign_up"
        app:cornerRadius="16dp"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCreateAccountEditText" />

</LinearLayout>