<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/labelQuizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/valueQuizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quiz1"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBaseline_toBaselineOf="@id/labelQuizName"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelPassed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/questions_passed"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelQuizName" />

        <TextView
            android:id="@+id/valuePassed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBaseline_toBaselineOf="@id/labelPassed"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/questions_failed"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPassed" />

        <TextView
            android:id="@+id/valueFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBaseline_toBaselineOf="@id/labelFailed"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>