<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/statusBarSpacer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/titleMainMenuTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        app:menu="@menu/logout_menu"
        app:theme="@style/ToolbarTheme"
        app:title="Quizzy"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/titleMainMenuTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/main_menu"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playQuizzesButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/play_quizzes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/viewScoresButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleMainMenuTextView"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/viewScoresButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_blue"
        android:elevation="8dp"
        android:text="@string/view_scores"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/adminButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playQuizzesButton"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/dark_blue"
        android:elevation="8dp"
        android:text="@string/admin_access"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewScoresButton"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <!--<Button
        android:id="@+id/signOutButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_out"
        android:textSize="20sp"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cornerRadius="16dp"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>